tests/ui/parallel-rustc/cycle_crash.rs
//@ compile-flags: -Z threads=2
//~^ERROR cycle detected when

const FOO: usize = FOO;

fn main() {}
